# AI_stress_test

./: .env.example  .gitignore  CODING_STANDARDS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/: README.md
apps/backend/: README.md
apps/frontend/: README.md  index.html  package.json
docs/: README.md  demo-metrics-glossary.md  demo-presentation-guide.md  deployment-philosophy.md  development-local-demo.md  development-workflow.md  roadmap.md  testing-strategy.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-use-openrouter-behind-llm-service.md  README.md
docs/ai/: llm-service.md
docs/architecture/: data-architecture.md  system-architecture.md  ui-philosophy.md
docs/modules/: README.md  reporting.md  scenario-builder.md  scenario-engine.md  scenario-lab.md  stress-engine.md
docs/operations/: observability.md  runbook.md
docs/security/: security-model.md
infra/: README.md
infra/docker/: README.md  backend.Dockerfile  frontend.Dockerfile
infra/terraform/: README.md
modules/: README.md
modules/reporting/: README.md
modules/scenario-builder/: README.md
modules/scenario-engine/: README.md
modules/scenario-lab/: README.md
modules/stress-engine/: README.md
scripts/: README.md  local_demo_server.py
tests/: README.md
tests/e2e/: README.md
tests/integration/: README.md
tests/performance/: README.md
tests/security/: README.md
(+22 files in other folders)
