[project]
name = "scenario-workbench"
version = "0.1.0"
description = "Repository foundation for an AI-assisted market risk scenario workbench."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
  { name = "Scenario Workbench Engineering" }
]
dependencies = [
  "pydantic>=2.8,<3.0"
]

[project.optional-dependencies]
backend = [
  "fastapi>=0.115,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests", "tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
